# computer_vision_pub

02VideoOperator/: CMakeLists.txt  main.cpp
03ReadPointCloudFromCE30D/: CE30Driver.cpp  CE30Driver.h  CMakeLists.txt  main.cpp
07TestContours/: CMakeLists.txt  main.cpp
09ACriminalInvestigationQuiz/: CMakeLists.txt  main.cpp
10TestCSV/: .gitignore  CMakeLists.txt  main.cpp  main.py
11TestC/: CMakeLists.txt  main.cpp
12Deflogging/: defog.py  defogAllPicsOfFolders.py  findAllPicsInFolders.py  guidedfilter.py
13NodeJs/: CMakeLists.txt
13NodeJs/Hello/: buffer.js  client02.js  connectMain.js  decompress.js  dnsMain.js  eventEmiiter.js  expressIndex.htm  expressMain.js  expressSever.js  expressUpload.htm  expressUploadServer.js  fileMain.js  functionMain.js  globalMain.js  hello.js  index.js  moduleMain.js  output.txt  postMain.js  server02.js  serverMain.js  streamMain.js  webClient.js  webSever.js
13NodeJs/Hello/Callback/: block.js  unblock.js
13NodeJs/Hello/Event/: event.js
13NodeJs/Hello/Package/: package.json
13NodeJs/Hello/Server/: server.js
13PythonMouse/: main.py
14CCallPython/: CMakeLists.txt  hello.py  main.cpp
15ImgSNR/: main.py  snr.py
16Electron/: index.html  main.js  package-lock.json  package.json
17DeepLearningPython/: chapter01.py  chapter03.py  chapter04.py  chapter045.py  sample_weight_py2.pkl
17DeepLearningPython/ch05/: TwoLayerNet.py  buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_native.py  train_neuralnet.py
17DeepLearningPython/ch06/: batch_norm.py  build_validation_data.py  compare_mnis.py  hyperparameter_optimization.py  imgshow.py  optimizer.py  overfit_dropout.py  overfit_weight_decay.py  sgdxy.py  weight_init_activation_histogram.py  weight_init_compare.py
17DeepLearningPython/ch07/: convolutionTest.py  pooling.py  simple_convnet.py  train_convnet.py  train_convnet_l.py  visualize_filter.py
17DeepLearningPython/ch08/: deep_convnet.py  half_float_network.py  misclassified_mnist.py  train_deepnet.py
17DeepLearningPython/common/: functions.py
17DeepLearningPython/dataset/: mnist.py
18testOdataPy/: main.py
19TensorFlowLearning/chapter04/: convertToRecords.py  feedingData.py  full_connected_reader.py  full_connected_reader2.py  graph.py  mnist.py  readExifInfo.py
21MarkTipRootPositionONImage/: main.py
22ImageSearch/: .gitignore  findFeatures.py  findHash.py  rootsift.py  search.py  searchHash.py
23MarkEdgeLineOfBlade/: main.py
24MarkFPPairInTwoImages/: main.py  res.json
252D3DAutoStitchingCVPart/: main.py
26BlobDetection/: main.py
27ExpendRootFlangeMask/: main.py
28RansacOrbFeatures/: .gitignore  main.py
29FindContoursPolyLines/: .gitignore  main.py
30TensorFlow/: .gitignore  BuildImgCapture3D.py  C03LineFitted.py  C04E05.py  C04E06.py  C04E07.py  C04E08.py  C04E09.py  C04E10.py  C04E11.py  C04E12.py  C04E13.py  C04E17.py  C04EBasicKn.py
31TFtransformation/: stitcher.py  test_perspective.py
32ImgSegInstanceWithKeras/: downloadData.py  initKaggleCredentials.py  main.py  testImgResize.py
34TimeSeriesForecast/: lesson01TimeSeriesAsSupervisedLearning.py  lesson03MLPForTimeSeriesForecasting.py
35ImageQaulity/: imageQuality.py  main.py
36GenerateCSVDataFromTurbineJson/: .gitignore  build_iris_format.py  json_op.py
37SimulatorSon/: main.py  simlate_rechoose.py
EXCELOperation/EXCEL01/: logInfo.py  main.py  main_format.py  xlwt_test.py
EXCELOperation/EXCEL02/: .gitignore  main.py  main_format.py
RosDev/catkin_ws/src/04ConvertPointsCloudFromRosBagToCvMat/: CMakeLists.txt  package.xml
RosDev/catkin_ws/src/04ConvertPointsCloudFromRosBagToCvMat/src/: readRosBag.cpp
RosDev/catkin_ws/src/05ControlDroneOfRosGazebo/: CMakeLists.txt  package.xml
RosDev/catkin_ws/src/05ControlDroneOfRosGazebo/src/: controlDroneByVelocity.cpp
RosDev/catkin_ws/src/06AutoPath/: CMakeLists.txt  package.xml
RosDev/catkin_ws/src/08CvBridge/: CMakeLists.txt  package.xml
RosDev/catkin_ws/src/08CvBridge/src/: imagePub.cpp  imageSub.cpp  image_converter.cpp
RosDev/catkin_ws/src/CppFun/: CMakeLists.txt
RosDev/catkin_ws/src/CppFun/cvutill/: CvKeyLineOperator.cpp  CvLineOperator.cpp  CvVectorImgsShow.cpp
RosDev/catkin_ws/src/CppFun/inc/: CvKeyLineOperator.h  CvLineOperator.h  CvVectorImgsShow.h
RosDev/catkin_ws/src/CppFun/test/: main.cpp
TensorFlow/: BuildTFRecordFile.py  Mnist_to_TFRecord.py  ReadTFRecordFile.py  Read_from_TFRecord.py  TensorBoard_9_1.py  TensorBoard_9_2.py  Tensorboard_9_3.py  dataProcessingStructure.py  mnist_inference.py  mnist_train.py  preProcessing_image.py  queueOperator.py  read_show_image.py  testTensorflow.py  threadsTest.py  transferLearning6_5_2.py
